[package]
name = "question_answer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.7.3", features = ["postgres", "sqlx-postgres", "uuid", "time", "runtime-tokio-rustls"]}
serde = "1.0.195"
serde_json = "1.0.111"

