[package]
name = "question_answer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.7.3", features = ["postgres", "sqlx-postgres", "uuid", "time", "runtime-tokio-rustls", "chrono", ]}
uuid = { version = "1.6.1", features = ["serde"] }
serde  = "1.0.195"
serde_json = "1.0.111"
chrono = { version = "0.4.31", features = ["serde"] }

